style.css
@font-face {
    font-family: 'DM Sans';
    src: url(assets/fonts/DMSans-Regular.ttf);
    font-weight: 400;
    font-display: swap;
}

@font-face {
    font-family: 'DM Sans';
    src: url(assets/fonts/DMSans-Italic.ttf);
    font-weight: 400;
    font-style: italic;
    font-display: swap;
}

@font-face {
    font-family: 'DM Sans';
    src: url(assets/fonts/DMSans-Bold.ttf);
    font-weight: bold;
    font-display: swap;
}

body {
    font-family: 'DM Sans', Verdana, Geneva, Tahoma, sans-serif;
    line-height: 1.5;
    margin: 0;
    background-color: #bbd3c3;
}

footer {
    position: fixed;
    bottom: 0;
    color: #fff;
    background-color: #333;
    height: 50px;
    width: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
}

p {
    padding: 0 20px;
}

h1,
h2 {
    padding: 0 20px;
}

h1 {
    font-weight: bold;
    text-transform: uppercase;
    line-height: 1.25;
}

button {
    background-color: #6f8878;
    border: none;
    border-radius: 6px;
    color: white;
    padding: 14px 28px;
    font-family: 'DM Sans', sans-serif;
    text-transform: uppercase;
    text-align: center;
    text-decoration: none;
    display: inline-block;
    font-size: 16px;
    cursor: pointer;
    position: relative;
    left: 20px;
    margin: 10px 0;
}

button:hover,
button:focus {
    background-color: #4f345a;
    color: #fff;
    transition: 0.4s;
}

/* NAVIGATION */
nav {
    width: 100%;
    overflow: hidden;
    position: relative;
    background-color: #3E5145;
}

nav ul {
    padding: 0;
    margin: 0;
}

nav ul li {
    list-style: none;
}

#nav-links {
    display: none;
}

nav a {
    float: left;
    display: block;
    color: #fff;
    text-align: center;
    padding: 14px 0 14px 0;
    text-decoration: none;
    width: 100%;
}

nav a.menu {
    background: #3E5145;
    display: block;
    position: absolute;
    right: 0;
    top: 0;
    width: fit-content;
    padding: 14px 16px;
}

nav a:hover,
nav a:focus {
    background-color: #4f345a;
    color: #fff;
    transition: 0.4s;
}

.home {
    color: #fff;
    float: left;
    display: block;
    padding: 0 16px;
    text-decoration: none;
}

@media only screen and (min-width: 768px) {
    nav {
        width: 100%;
        overflow: hidden;
        background-color: #3E5145;
    }

    nav ul {
        padding: 0;
        margin: 0;
        display: flex;
    }

    nav ul li {
        list-style: none;
        padding: 0 16px;
    }

    nav a {
        color: #fff;
        text-align: center;
        padding: 14px 16px;
        text-decoration: none;
    }

    #nav-links {
        display: flex;
        color: #fff;
        text-align: left;
        padding: 0;
        text-decoration: none;
    }

    nav a:hover {
        background-color: #4f345a;
        color: #fff;
        transition: 0.4s;
    }

    nav a.menu {
        display: none;
    }
}

/* CARDS */
img {
    max-width: 100%;
}

.card-front {
    width: 200px;
    height: 200px;
    background-image: linear-gradient(135deg, #6e9985, #4f345a);
}

.card-back {
    background-color: aquamarine;
    /* fallback in case img doesn't load */
    transform: rotateY(180deg);
}

.card-img {
    width: 200px;
    height: 200px;
    border-radius: 16px;
}

.scene {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-evenly;
    margin: 40px 16px;
}

.card {
    width: 200px;
    height: 200px;
    transition: transform 1s;
    transform-style: preserve-3d;
    position: relative;
    cursor: pointer;
    perspective: 1000px;
    margin: 10px;
}

.card.is-flipped {
    transform: rotateY(180deg);
    -webkit-transform: rotateY(180deg);
}

.card-front,
.card-back {
    width: 100%;
    height: 100%;
    border-radius: 16px;
    position: absolute;
    backface-visibility: hidden;
    -webkit-backface-visibility: hidden;
}

@media only screen and (max-width: 500px) {

    .card-front,
    .card-back,
    .card-img,
    .card {
        width: 120px;
        height: 120px;
    }
}

